--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Daily Boost</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
