--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="container m-3 border-round bg-blue-300" style="width: 450px;">
-        <h3 class="text-center">Recieve motivational quotes every day and make your day</h3>
+<body class="container m-3 border-round" style="background-color: azure;">
+    <div class="bg-blue-300" style="width: 450px;height: 50px;">
+        <!-- <h3 class="text-center"> motivational quotes for every day and make your day</h3> -->
         <span class="text-lg-start" id="text"></span>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="script.mjs"></script>
 
 </html>
